styles.css
html
{
    box-sizing: border-box;
    font-family: sans-serif;
    font-size: 24px;
}

*,
*::before,
*::after

{
    box-sizing: inherit;
}

body
{
    height: 100vh;
    margin: 0;
    padding: 0;
    background-color: rgb(189, 239, 200);
    display: flex;
    flex-direction:row;
}

.unselectable
{
    user-select: none;
}

.left   
{
    flex: 0 0 25%;
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    background-color:rgb(146, 195, 162);
}

.center
{
    flex: 0 0 50%;
    display: flex;
    padding-top: 5px;
    flex-direction: column;
    align-items: center;
}

.right
{
    flex: 0 0 25%;
    display: flex;
    flex-direction: column;
}

.logo
{
    display:flex;
    align-items: center;
    padding-left: 0;
    margin-left: 5px;
    margin-right: 5px;
    padding-bottom: 5px;
    margin-bottom: 20px;
    gap: 10px;
    border-bottom: 10px dotted rgb(8, 139, 95);
}

.picture
{
    width: 150px;
    height: 150px;
    border: 5px solid rgb(8, 139, 95);
    border-radius: 50%;
}

p
{
    font-size: 28px;
    font-weight: 400;
    padding-left: 10px;
    margin-top: 10px;
    color:rgb(5, 84, 58)
}

.chapter
{
    text-align:left;
    padding: 0;
    margin-top: 20px;
    color: rgb(17, 139, 8);
    font-size:32px;
    font-weight: bold;
}

.information
{
    margin: 0;
    padding: 0 20px;
    display: flex;
    flex-direction: column;
    gap: 15px;
    font-size: 24px;
    font-weight: 400;
    color:rgb(5, 84, 58)
}

.canvas
{
    height: 92%;
    aspect-ratio: 1 / 1;
    margin: 0;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
    border: 5px solid darkslategray;
}

.controls
{
    margin: 5px;
    display: flex;
    flex-direction:row;
    gap: 50px;
}

.title
{
    padding: 0px;
    margin: 5px;
    color: rgb(8, 139, 95);
    font-size:42px;
    font-weight: bold;
}

.button
{
    height: 60px;
    width: 150px;
    font-size: 24px;
    font-weight: bold;
    font-family: sans-serif;
    background-color:rgb(105, 186, 159);
    color: darkslategray;
    border: 3px solid darkslategray;
    border-radius: 15px;
}
button:hover
{
    background-color:rgb(131, 223, 192);
    font-size: 28px;
}
button:active
{
    background-color:rgb(185, 225, 212);
    font-size: 26px;
}

.cell
{
    aspect-ratio: 1 /1;
    margin: 0;
    padding: 0;
}

.grid
{
    border: 1px solid darkslategray;
}

